Remember to change the main controller back to how you need it. Can choose courses and lectures, sends info to individual lecture page. A bit rough atm and may have bugs. Havent checked too much.

--- a/trunk/css/student.css
+++ b/trunk/css/student.css
@@ -195,3 +195,8 @@ width: 100%;
 	width: 100%;
 	margin-right: 3em;
 }
+
+#user_courses {
+	width: 100%;
+	margin-right: 3em;
+}
